[gd_scene load_steps=2 format=3 uid="uid://c6hmoqlenfruh"]

[ext_resource type="Script" path="res://Scenes/Player/body_chain.gd" id="1_amtk2"]

[node name="BodyChain" type="Node2D"]
script = ExtResource("1_amtk2")

[node name="BodyLineBorder" type="Line2D" parent="."]
position = Vector2(-136, -75)
width = 35.0
default_color = Color(0, 0, 0, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 14
antialiased = true

[node name="BodyLine" type="Line2D" parent="."]
position = Vector2(-136, -75)
width = 29.0
default_color = Color(0.0156863, 0.776471, 0.780392, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 14

[node name="BodySegmentList" type="Node2D" parent="."]
